# armorpaint_plugins

io_gltf/: cgltf.c
io_svg/: nanosvg.c
io_usd/: io_usd.cc
proc_tensor/: tensor.js  tensor_bridge.js
proc_texsynth/lib/: Cargo.toml
proc_texsynth/lib/embed/: Cargo.toml
proc_texsynth/lib/embed/src/: embed.rs
proc_texsynth/wasm/: texsynth.js  texture-synthesis.wasm
proc_xatlas/: xatlas.cpp
